--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,32 +16,77 @@
         android:layout_marginBottom="5pt"
         ></TextView>
 
-    <android.widget.Button
-        android:id="@+id/naverbut"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="NAVER"
-        android:background="#2DB400"></android.widget.Button>
+        android:id="@+id/Text1"
+        android:gravity="center"
+        android:textSize="8pt"
+        android:text="선택을 시작하겠습니까?"
+        android:layout_marginTop="5pt"
+        android:layout_marginBottom="5pt"
+        ></TextView>
 
-    <android.widget.Button
+    <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/googlebut"
-        android:text="Google"
-        android:background="#FFDDDD"></android.widget.Button>
+        android:id="@+id/ChkAgree"
+        android:text="시작함"
+        ></CheckBox>
 
-    <android.widget.Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cbnugsbut"
-        android:text="충북대 개신누리"
-        android:background="#FFFFDD"></android.widget.Button>
+        android:id="@+id/Text2"
+        android:gravity="center"
+        android:textSize="8pt"
+        android:text="좋아하는 애완동물은?"
+        android:visibility="invisible"
+        android:layout_marginTop="5pt"
+        android:layout_marginBottom="5pt"
+        ></TextView>
 
-    <android.widget.Button
+    <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cbnulmsbut"
-        android:text="충북대 LMS"
-        android:background="#DDDDFF"></android.widget.Button>
+        android:id="@+id/Rgroup"
+        android:visibility="invisible"
+        >
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/RdoDog"
+            android:text="강아지"
+            ></RadioButton>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/RdoCat"
+            android:text="고양이"
+            ></RadioButton>
+
+        <RadioButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/RdoRabbit"
+            android:text="토끼"
+            ></RadioButton>
+    </RadioGroup>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/BtnOK"
+        android:text="선택 완료"
+        android:visibility="invisible"
+        ></Button>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ImgPet"
+        android:visibility="invisible"
+        ></ImageView>
 
 </LinearLayout>
